--- a/ASP.NET/АСУ_Склад.ASP.NET Application.csproj
+++ b/ASP.NET/АСУ_Склад.ASP.NET Application.csproj
@@ -305,6 +305,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="App_Themes\BaseTheme\Warehouse.css" />
     <Content Include="forms\Postupleniya\PostupleniyaE.aspx" />
     <Compile Include="forms\Postupleniya\PostupleniyaE.aspx.cs">
       <DependentUpon>PostupleniyaE.aspx</DependentUpon>
