--- a/BusinessServers/АСУ_Склад.BusinessServers.csproj
+++ b/BusinessServers/АСУ_Склад.BusinessServers.csproj
@@ -38,6 +38,10 @@
     <Reference Include="System.XML">
       <HintPath>System.XML.dll</HintPath>
     </Reference>
+    <ProjectReference Include="..\Objects\АСУ_Склад.Objects.csproj">
+      <Project>{e30ce244-97b9-4d9e-9889-4543e74d5619}</Project>
+      <Name>АСУ_Склад.Objects</Name>
+    </ProjectReference>
     <Reference Include="log4net">
       <HintPath>..\packages\log4net.2.0.3\lib\net40-client\log4net.dll</HintPath>
     </Reference>
@@ -123,10 +127,6 @@
     <Reference Include="ICSSoft.STORMNET.UserDataTypes">
       <HintPath>..\packages\NewPlatform.Flexberry.ORM.4.1.0-beta02\lib\net45\ICSSoft.STORMNET.UserDataTypes.dll</HintPath>
     </Reference>
-    <ProjectReference Include="..\Objects\АСУ_Склад.Objects.csproj">
-      <Project>{e30ce244-97b9-4d9e-9889-4543e74d5619}</Project>
-      <Name>АСУ_Склад.Objects</Name>
-    </ProjectReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ПоступленияBS.cs">
@@ -134,6 +134,21 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <None Include="packages.config" />
+    <Compile Include="МашинаBS.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="СкладBS.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ТоварBS.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ТоварНаСкладеBS.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Include="ЛичностьBS.cs">
+      <SubType>Code</SubType>
+    </Compile>
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
 </Project>
